# bachelors_project

./: .gitignore  Cargo.toml  README.md  codebase.txt  peer.key  rustfmt.toml
crates/cards/: Cargo.toml
crates/cards/src/: cards.rs  egui.rs  lib.rs
crates/cards/src/deck/: mod.rs  parallel.rs
crates/core/: Cargo.toml
crates/core/src/: connection.rs  connection_stats.rs  crypto.rs  game_state.rs  lib.rs  message.rs  player.rs  players_state.rs  poker.rs  timers.rs  wireMsg.rs  zk.rs
crates/core/src/net/: mod.rs  traits.rs
crates/core/src/protocol/: mod.rs  msg.rs  new_state.rs  state.rs  state_transition.rs
crates/core/tests/: hash_chain.rs  two_peer_demo.rs
crates/eval/: Cargo.toml
crates/eval/examples/: board.rs  chart.rs  eval_all7.rs  par_eval_all7.rs
crates/eval/src/: lib.rs
crates/eval/src/eval/: eval7.rs  mod.rs
crates/gui/: Cargo.toml  Trunk.toml  index.html
crates/gui/src/: account_view.rs  cards.rs  connect_view.rs  connection.rs  game_view.rs  gui.rs  lib.rs  main.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: mock_gui_tests.rs  two_peer_demo.rs
crates/integration-tests/tests/support/: mock_gui.rs  mock_transport.rs  mod.rs
crates/p2p-net/: Cargo.toml
crates/p2p-net/src/: lib.rs  p2ptx.rs  runtime_bridge.rs  swarm_task.rs
crates/peer-node/: Cargo.toml
crates/peer-node/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  lib.rs  main.rs  server.rs  table.rs  tables_pool.rs
crates/server/src/table/: player.rs  players_state.rs  state.rs
crates/table-engine/: Cargo.toml
crates/table-engine/src/: engine.rs  lib.rs  missing_vote.rs  mod.rs  player.rs  players_state.rs  types.rs  vote_pool.rs
docs/: architecture.dot  architecture.mmd  architecture2.dot  architecture3.dot  report.md  state_transition_communication_1.drawio  state_transition_communication_2.drawio  state_transition_communication_3.drawio  state_transition_communication_4.drawio  state_transition_communication_5.drawio  state_transition_communication_6.drawio
docs/use_cases/: use_case_01.drawio
src/: lib.rs
