[workspace]
resolver = "2"
members = [
    "crates/cards",
    "crates/core",
    "crates/eval",
    "crates/gui",
    "crates/server",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.0.1"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
eframe = { version = "0.31.0", default-features = false }
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.9.1"
serde = { version = "1.0.216", features = ["derive"] }
snow = "0.9.6"
tokio = "1.44.0"
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.26.0"

# crates
cards = { version = "0.0.1", path = "crates/cards", default-features = false }
core = { version = "0.0.1", path = "crates/core", default-features = false }
eval = { version = "0.0.1", path = "crates/eval", default-features = false }
gui = { version = "0.0.1", path = "crates/gui", default-features = false }
server = { version = "0.0.1", path = "crates/server", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
