[workspace]
resolver = "2"
members = [
    "crates/cards",
    "crates/core",
    "crates/eval",
    "crates/gui", "crates/p2p-net",
    "crates/server", "crates/table-engine",
]

[workspace.package]
edition = "2024"
version = "0.0.1"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
eframe = { version = "0.31.1", features = ["ron", "serde"]}
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.9.1"
serde = { version = "1.0.216", features = ["derive"] }
snow = { version = "0.9.6"} 
tokio = { version = "1.45.1", features = ["rt", "sync", "macros"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.26.0"
getrandom = { version = "0.2.16", features = ["js"], default-features = false}
futures = "0.3"

# crates
poker-cards = { version = "0.0.1", path = "crates/cards", default-features = false }
poker-core = { version = "0.0.1", path = "crates/core", default-features = false }
poker-eval = { version = "0.0.1", path = "crates/eval", default-features = false }
poker-gui = { version = "0.0.1", path = "crates/gui", default-features = false }
poker-server = { version = "0.0.1", path = "crates/server", default-features = false }
p2p-net = { version = "0.0.1", path = "crates/p2p-net", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
