[package]
name = "poker-cards"
description = "zkpoker cards types."
edition = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
eframe = { workspace = true, optional = true }
image = { version = "0.25.5", optional = true, default-features = false, features = ["png"] }
rand = { workspace = true }
serde = { workspace = true }

[features]
parallel = []
egui = ["eframe", "image"]

