[package]
name = "poker-core"
version = { workspace = true }
edition = { workspace = true }
description = "zkpoker core types."

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
blake2 = "0.10.6"
bs58 = "0.5.1"
bytes = { version = "1.10.0", optional = true }
tiny-bip39 = { version = "2.0.0", default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "serde",
] }
poker-cards = { workspace = true }
poker-eval = { workspace = true, optional = true }
futures-util = { version = "0.3.31", optional = true, features = ["sink"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive", "rc"] }   # ← add “rc”
serde_json = "1.0"
snow = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-rustls = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.26.2", optional = true, features = [
    "rustls-tls-webpki-roots",
] }
zeroize = "1.8.1"
tracing = "0.1.41"
async-trait = "0.1.88"
rand_core = "0.9.3"
libp2p = {workspace =true, features = ["ed25519"]}
libp2p-identity = {workspace =true, features = ["ed25519"]}

[features]
connection = [
    "bytes",
    "futures-util",
    "snow",
    "tokio-rustls",
    "tokio-tungstenite",
]
eval = ["poker-eval"]
