[package]
name = "poker_gui"
description = "gui for poker client"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
eframe = {version = "0.31.1", features = ["ron", "serde"]}
ewebsock = { version = "0.8.0", features = ["tls"] }
poker-cards = { workspace = true, features = ["egui"] }
poker-core = { workspace = true }
indoc = "2"
log = { workspace = true }
serde = { workspace = true }
snow = { workspace = true }
getrandom = { version = "0.2.16", features = ["js"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
tokio-rustls = { workspace = true }
env_logger = { workspace = true }
