[package]
name = "poker_gui"
description = "gui for poker client"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
eframe = {version = "0.31.1", features = ["ron", "serde"]}
ewebsock = { version = "0.8.0", features = ["tls"] }
poker-cards = { workspace = true, features = ["egui"] }
poker-core = { workspace = true }
indoc = "2"
log = { workspace = true }
serde = { workspace = true }
snow = { workspace = true }
tokio= { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
tokio-rustls = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
tokio-rustls = { workspace = true }
env_logger = { workspace = true }
