[package]
name    = "p2p-net"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "libp2p transport layer for the ZK-Poker project"

[dependencies]
# --- core project -------------
poker-core = { path = "../core" }      # SignedMessage, NetTx, etc.
poker-table-engine = {path = "../../crates/table-engine"}

# --- async / util -------------
tokio        = { version = "1.38", features = ["rt-multi-thread", "macros", "sync"] }
async-trait  = "0.1"
anyhow       = "1.0"
bincode      = "1.3"                   # (de)serialise SignedMessage

# --- optional (nice-to-have) ---
log          = "0.4"
futures = "0.3.31"
libp2p-autonat = {workspace = true}
libp2p = {workspace = true,  features = ["full"]}
libp2p-identity = { workspace = true, features = ["peerid", "ed25519"]}
libp2p-dns = {workspace = true}
libp2p-swarm = {workspace = true, features = ["macros"]}
libp2p-swarm-derive = {workspace = true}

[features]
# Compile-time switch so existing WebSocket build keeps working.
# When `p2p` is enabled, downstream crates can pick P2pTx/P2pRx.
default = []          # keep off by default until Stage-4 GUI swap
p2p     = []
