[package]
name = "peer-node"
edition.workspace = true
version.workspace = true

[dependencies]
tokio          = { version = "1.37", features = ["macros", "rt-multi-thread"] }
clap           = { version = "4", features = ["derive"] }
anyhow         = "1"
bincode        = "1"
p2p-net        = { path = "../p2p-net" }
poker-table-engine = { workspace = true}
poker-core= { workspace = true}
env_logger = "0.11"
log = "0.4.27"
libp2p-autonat = {workspace = true}
libp2p= {workspace = true,  features = ["full"]}
libp2p-identity = { workspace = true, features = ["peerid", "ed25519"]}
libp2p-dns = {workspace = true}
libp2p-swarm = {workspace = true, features = ["macros"]}
libp2p-swarm-derive = {workspace = true}
