[package]
name = "table-engine"
edition.workspace = true
version.workspace = true

[dependencies]
poker-core = { path = "../core" }
poker-eval = {path = "../eval"}
ahash      = "0.8"
rand       = {workspace = true}
thiserror  = "1"
log        = "0.4"
futures    = "0.3"
tokio      = { version = "1", features = ["sync", "time"] }
async-trait = "0.1.88"
anyhow = "1.0.98"
